--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "native-base": "^3.0.7",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-amap-geolocation": "^1.1.2",
     "react-native-confirmation-code-field": "^7.1.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.36.2",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
