--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-module-resolver": "^4.1.0",
+    "jcore-react-native": "^1.9.4",
+    "jmessage-react-plugin": "^3.2.0",
+    "jpush-react-native": "^2.8.7",
     "moment": "^2.29.1",
     "native-base": "^3.0.7",
     "react": "17.0.1",
