--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,5 +21,10 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <!-- 极光的配置 -->
+      <meta-data android:name="JPUSH_CHANNEL" android:value="${APP_CHANNEL}" />
+      <meta-data android:name="JPUSH_APPKEY" android:value="${JPUSH_APPKEY}" />
+      <meta-data android:name="com.amap.api.v2.apikey" android:value="key" >cc7d3bdcc6c391887c985616b8fef6d8</meta-data>
     </application>
 </manifest>
