--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,10 @@ target 'social' do
     :hermes_enabled => false
   )
 
+  # pod 'react-native-amap-geolocation', :path => '../node_modules/react-native-amap-geolocation'
+
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'socialTests' do
     inherit! :complete
     # Pods for testing
