--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-screens": "^3.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-uri": "^1.2.3",
+    "react-native-tab-navigator": "^0.3.4",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
     "redux-devtools-extension": "^2.13.9",
